--- a/app/views/merchant_discounts/index.html.erb
+++ b/app/views/merchant_discounts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>List of Discounts</h1>
+<h3><%= link_to 'Create a New Discount', new_merchant_discount_path(@discounts.first.merchant_id) %></h3>
 
 <% @discounts.each do |discount| %>
   <section id="discount-info-<%=discount.id%>">
