--- a/app/views/merchant_discounts/new.html.erb
+++ b/app/views/merchant_discounts/new.html.erb
@@ -1,6 +1,7 @@
-<h2> Add a Discount </h2>
+<h2> Add Discount </h2>
 
-<%= render partial: 'merchant_discount_form', locals: {
-                                              model: @discount, 
-                                              url: merchant_discounts_path 
-                                              } %>
+<%= render partial: 'merchant_discount_form', 
+          locals: {
+                    model: @discount, 
+                    url: merchant_discounts_path 
+                  } %>
