--- a/app/views/merchant_discounts/show.html.erb
+++ b/app/views/merchant_discounts/show.html.erb
@@ -2,3 +2,5 @@
 
 <li>Discount Percentage: <%= @discount.discount_percentage %></li>
 <li>Quantity Threshold:  <%= @discount.quantity_threshold %></li>
+
+<%= link_to 'Edit Discount', edit_merchant_discount_path(@discount.merchant_id, @discount.id) %>
