--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -1,8 +1,14 @@
-<h1>Invoice Overview</h1>
+<h1>Admin Invoice Overview</h1>
 
-==============================
-Invoice Details
-===============================
+<h3> Customer Information</h3>
+================================================
+<section class="customer_details">
+<li>First Name:       <%= @invoice.customer.first_name %></li>
+<li>Last Name:        <%= @invoice.customer.last_name %></li><br>
+</section>
+
+<h3> Invoice Details </h3>
+================================================
 <section class="invoice_details">
 <%= render partial: 'select_form', locals: {
                                               model: @invoice, 
@@ -10,26 +16,21 @@ Invoice Details
                                               button_text: 'Update Invoice Status'
                                               } %><br>
 
-<li>Status:        <%= @invoice.status.capitalize %></li>
-<li>ID:            <%= @invoice.id %></li>
-<li>Total Revenue: $<%= @invoice.total_revenue %></li>
+<li>ID: <%= @invoice.id %></li>
+<li>Status: <%= @invoice.status.capitalize %></li>
 <li><%= @invoice.created_at.strftime("Created: %A, %B %d, %Y") %></li><br>
+<li>Total Revenue: $<%= @invoice.total_revenue %></li>
+<li>Discount Applied: -$<%= @invoice.merchant.discount_amount?(@invoice.invoice_items) %></li>
+<li>Total After Discount: $<%= (@invoice.total_revenue - @invoice.merchant.discount_amount?(@invoice.invoice_items)) %></li>
 </section>
-=============================
-Customer Details
-===============================
-<section class="customer_details">
-<li>First Name:       <%= @invoice.customer.first_name %></li>
-<li>Last Name:        <%= @invoice.customer.last_name %></li><br>
-</section>
-===============================
-Item Details
-================================
+
+<h3> Items Ordered</h3>
+================================================
 <% @invoice.items.each do |item| %>
   <section id="item-<%=item.id%>">
     <h4>        <%= item.name %></h4>
     <li>Qty:    <%= item.quantity_ordered(item.id, @invoice.id).to_sentence %></li>
     <li>Price: $<%= item.total_price(item.id, @invoice.id) %></li>
-    <li>Status: <%= item.status(item.id, @invoice.id).to_sentence.capitalize %></li><br>
+    <li>Status: <%= item.status(item.id, @invoice.id).to_sentence.capitalize %></li>
   </section>
 <% end %>
