finish all user stories model/feature tests

--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -4,7 +4,7 @@
 ================================================
 <section class="customer_details">
 <li>First Name:       <%= @invoice.customer.first_name %></li>
-<li>Last Name:        <%= @invoice.customer.last_name %></li><br>
+<li>Last Name:        <%= @invoice.customer.last_name %></li>
 </section>
 
 <h3> Invoice Details </h3>
