--- a/app/views/merchants/dashboard.html.erb
+++ b/app/views/merchants/dashboard.html.erb
@@ -5,13 +5,14 @@ Merchant Name: <%= @merchant.name %> <br>
 <%= link_to('View All Discounts', merchant_discounts_path(@merchant.id)) %>
 
 <ul class='merchant-top-5-customers-list'>
+ <h3>Top 5 Customers</h3>
   <% @merchant.top_five_customers.each do |customer| %>
     <li><%= customer.first_name %>: <%= customer.successful_transactions %></li>
   <% end %>
 </ul>
 
 <ul class='items-rdy-to-ship'>
-  <h2>Items Ready to Ship</h2>
+  <h3>Items Ready to Ship</h3>
   <% @merchant.order_merchant_items_by_invoice_created_date(@merchant.items_ready_to_ship).each do |item| %>
     <li>
       <%= item.name %>
